[gd_scene load_steps=9 format=3 uid="uid://bxv4tp0fkajsg"]

[ext_resource type="Script" uid="uid://dk2xg5ulhxoqf" path="res://scripts/level3G.gd" id="1_vbfvv"]
[ext_resource type="PackedScene" uid="uid://41n0gpbbbtde" path="res://scenes/background.tscn" id="2_teayu"]
[ext_resource type="PackedScene" path="res://scenes/menu.tscn" id="3_nuw62"]
[ext_resource type="PackedScene" path="res://scenes/title_sprite.tscn" id="4_xmdix"]
[ext_resource type="Script" uid="uid://dbjq61yneu036" path="res://scripts/folowing_mouse_directly.gd" id="5_ltrbe"]
[ext_resource type="Script" uid="uid://dwqwyju41hwbe" path="res://scripts/path_follow_2d.gd" id="6_vbfvv"]
[ext_resource type="PackedScene" uid="uid://dv1sangnn06wt" path="res://scenes/evil_ball.tscn" id="7_a8urj"]

[sub_resource type="Curve2D" id="Curve2D_vbfvv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 458, 407, 0, 0, 0, 0, 654, 109, 0, 0, 0, 0, 1012, 120, 0, 0, 0, 0, 1164, 409, 0, 0, 0, 0, 1014, 683, 0, 0, 0, 0, 713, 683, 0, 0, 0, 0, 458, 407)
}
point_count = 7

[node name="Level" type="Node2D"]
script = ExtResource("1_vbfvv")

[node name="Background" parent="." instance=ExtResource("2_teayu")]

[node name="Menu" parent="." instance=ExtResource("3_nuw62")]
offset_left = 960.0
offset_top = 670.0
offset_right = 960.0
offset_bottom = 670.0

[node name="Title" parent="." instance=ExtResource("4_xmdix")]
position = Vector2(410, 155)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_vbfvv")
script = ExtResource("5_ltrbe")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(458, 407)
rotation = -0.98901445
script = ExtResource("6_vbfvv")

[node name="Marker2D" type="Marker2D" parent="Path2D/PathFollow2D"]
position = Vector2(88.36514, -606.3041)
rotation = 0.98901445

[node name="Timer" type="Timer" parent="Path2D"]
autostart = true

[node name="evil_ball" parent="." instance=ExtResource("7_a8urj")]
position = Vector2(103, 105)

[connection signal="timeout" from="Path2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="evil_ball" to="." method="_on_evil_ball_mouse_entered"]
[connection signal="touched_mouse" from="evil_ball" to="." method="_on_evil_ball_touched_mouse"]
